src/objects/Deal_Registration__c.object
<CustomObject>
    <fields>
        <fullName>End_User_State_Province_NA__c</fullName>
        <label>End User State / Province</label>
        <picklist>
            <controllingField>End_User_Country__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrigento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguadilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahuachapán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aichi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisén del General Carlos Ibáñez del Campo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alajuela</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alderney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alessandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alta Verapaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto Paraguay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto Paraná</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amambay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Street__c</fullName>
        <label>End User Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Tax_Id__c</fullName>
        <label>End User Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Vertical_Segment__c</fullName>
        <label>End User Vertical Segment</label>
        <picklist>
            <controllingField>End_User_Vertical__c</controllingField>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care: Hospitals - Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Emergency and Ambulatory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Out Patient Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Physician Offices and Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Reference and Diagnostic Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory Care: Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks, Museums, and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care: Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care: Nursing Homes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Vertical__c</fullName>
        <label>End User Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare(core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality(core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing (core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail(core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics (core)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Zip_Postal_Code__c</fullName>
        <label>End User Zip / Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_in_End_User_org__c</fullName>
        <label>Engagement Level in End User org?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date  Legacy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Approve_Reject_Date__c</fullName>
        <label>Extension Approve/Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension_Status__c</fullName>
        <label>Extension Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Accept_Reject_Date__c</fullName>
        <formula>DATEVALUE(Accept_Reject_Date__c)</formula>
        <label>Hidden Accept/Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_Approval_Submission_Date__c</fullName>
        <formula>DATEVALUE(Approval_Submission_Date__c)</formula>
        <label>Hidden Approval Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_DR_Activation_Date__c</fullName>
        <formula>DATEVALUE( DR_Activation_Date__c )</formula>
        <label>Hidden DR Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_DR_Expiration_Date__c</fullName>
        <formula>DATEVALUE( DR_Expiration_Date__c )</formula>
        <label>Hidden DR Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_Extension_Approve_Reject_Date__c</fullName>
        <formula>DATEVALUE(Extension_Approve_Reject_Date__c)</formula>
        <label>Hidden Extension Approve/Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Partner_sold_to_this_End_User__c</fullName>
        <label>Has Partner sold to this End User?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Level_2_Approver_Name__c</fullName>
        <formula>Level_2_Approver__r.FirstName + &apos; &apos; + Level_2_Approver__r.LastName</formula>
        <label>Hidden Level 2 Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Level_3_Approver_Name__c</fullName>
        <formula>Level_3_Approver__r.FirstName + &apos; &apos; + Level_3_Approver__r.LastName</formula>
        <label>Hidden Level 3 Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_End_User_an_existing_Zebra_Customer__c</fullName>
        <label>Is End User an existing Zebra Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_opportunity_a_roll_out__c</fullName>
        <label>Is opportunity a roll-out?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_Partner_Qualified_to_Deliver__c</fullName>
        <label>Is the Partner Qualified to Deliver?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_Zebra_product_being_sold__c</fullName>
        <label>Does deal include sw &amp;/or services?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_budgeted_Project__c</fullName>
        <label>Is this a budgeted Project?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <label>Level 2 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registration5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver__c</fullName>
        <label>Level 3 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registration7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed_CHAM_Name__c</fullName>
        <formula>Managed_CHAM__r.FirstName &amp; &apos; &apos; &amp;  Managed_CHAM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed CHAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_CHAM__c</fullName>
        <label>Managed CHAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Deal_Products__c</fullName>
        <label>No. of Deal Products</label>
        <summaryForeignKey>DealProduct__c.Deal_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Application__c</fullName>
        <formula>TEXT(Opportunity__r.Application__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_First_Ship_Date__c</fullName>
        <formula>Opportunity__r.Order_Date__c</formula>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Fulfillment__c</fullName>
        <formula>TEXT( Opportunity__r.Fulfillment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_NA__c</fullName>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registration6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Primary_Competitor__c</fullName>
        <label>Competitor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vertical__c</fullName>
        <formula>TEXT(Opportunity__r.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Membership_Id__c</fullName>
        <formula>IF( (ISNULL(Partner__r.AccountNumber) ||  ISBLANK(Partner__r.AccountNumber) ) ,  Partner__r.Account_Number__c , Partner__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Program ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <description>Region of the Partner Account</description>
        <label>Partner Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registration (Partner Account)</relationshipLabel>
        <relationshipName>Deal_Registration3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_Describe_Project_and_Goals__c</fullName>
        <label>Please Describe Project and Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <formula>TEXT(Owner:User.Contact.Preferred_Language__c)</formula>
        <label>Preferred Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Interactions_to_Date__c</fullName>
        <label>Sales Interactions to Date</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Satisfied_with_info_from_Partner__c</fullName>
        <label>Satisfied with info from Partner?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Offer_Attached__c</fullName>
        <inlineHelpText>Kindly indicate if you are including Zebra Technologies Service Offerings as part of the solution that you are about to implement.</inlineHelpText>
        <label>Service Offer Attached?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Rewards_Discount_Percentage__c</fullName>
        <label>Solution Rewards Discount Percentage</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Integrator__c</fullName>
        <label>System Integrator</label>
        <picklist>
            <controllingField>End_User_Vertical__c</controllingField>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoozAllen Hamilton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CACI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science Corporation (CSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deloitte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP/EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockheed Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northrup Grumman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinetiq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raytheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segovia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unisys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_professional_services_being_sold__c</fullName>
        <label>Type of professional services being sold</label>
        <picklist>
            <controllingField>Is_the_Zebra_product_being_sold__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Installation and Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-to-end Solutions Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_software_being_sold__c</fullName>
        <label>Type of software being sold</label>
        <picklist>
            <controllingField>Is_the_Zebra_product_being_sold__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Android, Zebra printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Windows, Zebra printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Android, non Zebra printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Windows, non Zebra printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Android, no printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra Windows, no printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra printer, non Zebra Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra printer, non Zebra Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra printer, iOS device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra desktop printer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_services_are_being_offered__c</fullName>
        <label>What services are being offered?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_professional_services_revenue__c</fullName>
        <label>% of professional services revenue?</label>
        <picklist>
            <controllingField>Is_the_Zebra_product_being_sold__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_software_revenue_for_this_deal__c</fullName>
        <description>If the Deal Registration is for solution Provider, Partner has to answer Percentage of the software revenue for that deal</description>
        <label>% of software revenue for this deal?</label>
        <picklist>
            <controllingField>Is_the_Zebra_product_being_sold__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deal Registration</label>
    <listViews>
        <fullName>All_Deal_Registrations</fullName>
        <columns>NAME</columns>
        <columns>DR_ConfirmationNumber__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>Accept_Reject_Date__c</columns>
        <columns>DR_Expiration_Date__c</columns>
        <columns>Deal_Projected_Close_Date__c</columns>
        <columns>Deal_Amount__c</columns>
        <columns>Distributor_Name_if_Tier_2__c</columns>
        <columns>Partner__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>End_User_Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Deal Registrations</label>
    </listViews>
    <listViews>
        <fullName>All_Deal_Registrations_APAC</fullName>
        <columns>NAME</columns>
        <columns>DR_ConfirmationNumber__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>Accept_Reject_Date__c</columns>
        <columns>DR_Expiration_Date__c</columns>
        <columns>Deal_Projected_Close_Date__c</columns>
        <columns>Deal_Amount__c</columns>
        <columns>Distributor_Name_if_Tier_2__c</columns>
        <columns>Distributor__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>End_User_Lookup__c</columns>
        <columns>End_User_Country__c</columns>
        <columns>Opportunity_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>All Deal Registrations</label>
    </listViews>
    <listViews>
        <fullName>All_Deal_Registrations_EMEA</fullName>
        <columns>NAME</columns>
        <columns>DR_ConfirmationNumber__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>Accept_Reject_Date__c</columns>
        <columns>DR_Expiration_Date__c</columns>
        <columns>Deal_Projected_Close_Date__c</columns>
        <columns>Deal_Amount__c</columns>
        <columns>Distributor_Name_if_Tier_2__c</columns>
        <columns>Distributor__c</columns>
        <columns>Partner__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>End_User_Lookup__c</columns>
        <columns>End_User_Country__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>All Deal Registrations</label>
    </listViews>
    <listViews>
        <fullName>All_Deal_Registrations_LATAM</fullName>
        <columns>NAME</columns>
        <columns>DR_ConfirmationNumber__c</columns>
        <columns>Approval_Submission_Date__c</columns>
        <columns>Accept_Reject_Date__c</columns>
        <columns>DR_Expiration_Date__c</columns>
        <columns>Deal_Projected_Close_Date__c</columns>
        <columns>Deal_Amount__c</columns>
        <columns>Distributor_Name_if_Tier_2__c</columns>
        <columns>Distributor__c</columns>
        <columns>Partner__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>End_User_Lookup__c</columns>
        <columns>End_User_Country__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Region__c</field>
            <operation>equals</operation>
            <value>LATAM</value>
        </filters>
        <label>All Deal Registrations</label>
    </listViews>
</CustomObject>